[metadata]
name = peinan-utils
version = file:peinan_utils/VERSION
url = https://github.com/peinan/peinan-utils-py
author = Peinan
license = MIT
description = Personal Python package
long_description = file: README.md

[options]
packages = peinan_utils
include_package_data = True
zip_safe = False
python_requires = >=3.6
install_requires =
    mecab-python3

[options.extras_require]
dev =
    pytest>=3
    coverage
    tox
